--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,26 @@
 </head>
 <body>
 
-<%= yield %>
+<div class="container">
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <%= link_to 'Holiday', root_path, class: "navbar-brand" %>
+      </div>
+      <div class="collapse navbar-collapse">
+        <%= link_to 'Take off request', details_new_path, class: "btn btn-default navbar-btn", type: "button" %>
+      </div>
+    </div>
+  </nav>
+
+  <%= yield %>
+</div>
 
 </body>
 </html>
