--- a/app/views/details/_form.html.erb
+++ b/app/views/details/_form.html.erb
@@ -22,7 +22,7 @@
 
   <div class="form-group">
     <%= f.label :type %><br>
-    <%= f.select :type, options_for_select(["Sick", "Annual"]), {}, {class: "form-control"} %>
+    <%= f.select :type, options_for_select(["medical", "annual"]), {}, {class: "form-control"} %>
   </div>
 
   <div class="form-group">
