--- a/app/views/summaries/index.html.erb
+++ b/app/views/summaries/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-md-10">
-    <table class="table table-hover table-bordered pull-left">
+    <table class="table table-hover pull-left">
       <thead>
       <tr>
         <th>员工</th>
